update dockerfile and yaml

--- a/app/index.html
+++ b/app/index.html
@@ -3,19 +3,55 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Minha Página Simples</title>
+    <title>Perfil</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="img" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
   </head>
   <body>
-    <header>
-      <h1>Bem-vindo à Minha Página!</h1>
-    </header>
-    <main>
-      <p>Testando o Pod</p>
-      <button>Saiba Mais</button>
-    </main>
-    <footer>
-      <p>&copy; 2024 - Minha Página Simples</p>
-    </footer>
+    <div class="container">
+      <header>
+        <h1>Perfil</h1>
+        <p>Cloud Architect</p>
+      </header>
+
+      <main class="profile">
+        <section class="about">
+          <h2>Sobre mim</h2>
+          <p>
+            Descobri minha paixão pela tecnologia enquanto cursava o ensino
+            médio técnico e percebi a amplitude da área e como ela oferece
+            oportunidades para explorar e inovar. Decidi então estudar
+            Computação em Nuvem e venho me aprimorando na área desde então.
+          </p>
+        </section>
+
+        <div class="profile-picture">
+          <img src="foto.png" alt="Foto do Perfil" />
+        </div>
+
+        <section class="details">
+          <h2>Detalhes</h2>
+          <ul>
+            <li><strong>Nome:</strong> Nader Souza</li>
+            <li><strong>Idade:</strong> 22 anos</li>
+            <li><strong>Localização:</strong> 'São Paulo, Brasil</li>
+          </ul>
+          <div class="social-media">
+            <div class="social-media">
+              <a href="https://linkedin.com/in/nader-souza" target="_blank">
+                <i class="fa-brands fa-linkedin"></i>
+              </a>
+              <a href="https://github.com/NaderSouza" target="_blank">
+                <i class="fa-brands fa-github"></i>
+              </a>
+            </div>
+          </div>
+        </section>
+      </main>
+    </div>
   </body>
 </html>
