--- a/app/index.html
+++ b/app/index.html
@@ -22,10 +22,10 @@
         <section class="about">
           <h2>Sobre mim</h2>
           <p>
-            Descobri minha paixão pela tecnologia enquanto cursava o ensino
-            médio técnico e percebi a amplitude da área e como ela oferece
-            oportunidades para explorar e inovar. Decidi então estudar
-            Computação em Nuvem e venho me aprimorando na área desde então.
+            DevOps apaixonado por construir e otimizar soluções em nuvem. Tenho
+            expertise em arquiteturas baseadas em AWS, Kubernetes, e Terraform,
+            com experiência na implementação de pipelines CI/CD e automação de
+            infraestruturas escaláveis.
           </p>
         </section>
 
@@ -40,15 +40,16 @@
             <li><strong>Idade:</strong> 22 anos</li>
             <li><strong>Localização:</strong> 'São Paulo, Brasil</li>
           </ul>
+
           <div class="social-media">
-            <div class="social-media">
-              <a href="https://linkedin.com/in/nader-souza" target="_blank">
-                <i class="fa-brands fa-linkedin"></i>
-              </a>
-              <a href="https://github.com/NaderSouza" target="_blank">
-                <i class="fa-brands fa-github"></i>
-              </a>
-            </div>
+            <a href="https://linkedin.com/in/nader-souza" target="_blank">
+              <i class="fa-brands fa-linkedin"></i>
+              <span>Linkedin</span>
+            </a>
+            <a href="https://github.com/NaderSouza" target="_blank">
+              <i class="fa-brands fa-github"></i>
+              <span>GitHub</span>
+            </a>
           </div>
         </section>
       </main>
